; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_opt_height.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_opt_height.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPT_INT64 = common dso_local global i32 0, align 4
@INT_MAX = common dso_local global i32 0, align 4
@screen_height = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @opt_height to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opt_height(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = load i32, i32* @OPT_INT64, align 4
  %10 = load i32, i32* @INT_MAX, align 4
  %11 = call i32 @parse_number_or_die(i8* %7, i8* %8, i32 %9, i32 1, i32 %10)
  store i32 %11, i32* @screen_height, align 4
  ret i32 0
}

declare dso_local i32 @parse_number_or_die(i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
